fix: adjust z-index of banner image, banner content, and banner overlay to ensure banner image can correctly be rendered on Home page

--- a/src/style.css
+++ b/src/style.css
@@ -125,6 +125,7 @@ header {
   padding: 4rem 0;
   color: #ffffff;
   text-shadow: 0 0.2px 0.8px rgba(0, 0, 0, 0.5);
+  background-color: #000;
 }
 
 .banner-img{
@@ -135,7 +136,7 @@ header {
   height: 100%;
   object-fit: cover;
   object-position: center;
-  z-index: -2;
+  z-index: 1;
 }
 
 .banner-overlay{
@@ -145,12 +146,13 @@ header {
   width: 100%;
   height: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9));
-  z-index: -1;
+  z-index: 2;
+  pointer-events: none;
 }
 
 .banner-content {
   position: relative;
-  z-index: 1;
+  z-index: 3;
   width: 100%;
   display: flex;
   flex-direction: column;
